# Job-Tracker

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
auth/: __init__.py  gmail_auth.py  sheets_auth.py
config/: __init__.py  keywords.py  settings.py
detection/: __init__.py  classifier.py  detector.py  extractor.py  false_positives.py
gmail/: __init__.py  client.py  fetcher.py  parser.py
hitl/: __init__.py  conflict_detector.py  conflict_resolver.py
llm/: __init__.py  deepseek_client.py  email_analyzer.py  llm_client.py  prompts.py
matching/: __init__.py  matcher.py
models/: __init__.py  application.py  email.py
sheets/: __init__.py  client.py  manager.py  merge_manager.py
tracking/: __init__.py  conflict_resolutions.py  merged_applications.py  processed_emails.py
utils/: __init__.py  text_utils.py
